tests-v2/tests/ui_required_constraints/compile_fail_missing.stderr
error[E0425]: cannot find value `ID` in the crate root
  --> tests/ui_required_constraints/compile_fail_missing.rs:10:10
   |
10 | #[derive(Accounts)]
   |          ^^^^^^^^ not found in the crate root
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `idl-build`
  --> tests/ui_required_constraints/compile_fail_missing.rs:10:10
   |
10 | #[derive(Accounts)]
   |          ^^^^^^^^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `Accounts` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `Accounts` may come from an old version of the `anchor_derive_accounts_v2` crate, try updating your dependency with `cargo update -p anchor_derive_accounts_v2`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): IsSuperset<(MinValueConstraint, ()), (_, ())>` is not satisfied
  --> tests/ui_required_constraints/compile_fail_missing.rs:10:10
   |
10 | #[derive(Accounts)]
   |          ^^^^^^^^ the trait `Find<MinValueConstraint, _>` is not implemented for `()`
   |
help: the following other types implement trait `Find<C, Idx>`
  --> $WORKSPACE/lang-v2/src/traits.rs
   |
   | impl<C, T> Find<C, Here> for (C, T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(C, T)` implements `Find<C, Here>`
   | impl<C, H, T, Idx> Find<C, There<Idx>> for (H, T) where T: Find<C, Idx> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(H, T)` implements `Find<C, There<Idx>>`
   = note: required for `()` to implement `IsSuperset<(MinValueConstraint, ()), (_, ())>`
note: required by a bound in `__check`
  --> tests/ui_required_constraints/compile_fail_missing.rs:13:18
   |
13 |     pub counter: TestAccount<Counter>,
   |                  ^^^^^^^^^^^ required by this bound in `__check`
